Paperless-ngx/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-db
  namespace: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-db
  template:
    metadata:
      labels:
        app: paperless-db
      annotations:
        k8up.io/backup: "true"
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - paperless
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: paperless-db
