Paperless-ngx/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-db
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
