Paperless-ngx/service-paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - name: http
      port: 80
      targetPort: http
